cfn/02-create-ec2-instance.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Template generated by aacecandev

Parameters:
  MyIp:
    Type: String
    Description: Your IP address
    Default: 0.0.0.0/0
  DefaultVpcId:
    Type: String
    Description: ID of the default VPC
    Default: vpc-12345678
  DefaultSubnetId:
    Type: String
    Description: ID of the default subnet
    Default: subnet-12345678
  AmiId:
    Type: String
    Description: ID of the AMI
    Default: ami-12345678

Resources:
  MyKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: MyKeyPair
  MySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: MySecurityGroup
      SecurityGroupIngress:
        - CidrIp: !Sub ${MyIp}/32
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: DefaultVpcId
  MyInstance:
    Type: "AWS::EC2::Instance"
    Properties:
      BlockDeviceMappings:
        - DeviceName: /dev/sdb
          Ebs:
            DeleteOnTermination: true
            VolumeSize: 30
      ImageId:
        Ref: AmiId
      KeyName:
        Ref: MyKeyPair
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt update -y
          sudo apt install apache2=2.4.29-1ubuntu4.25 --yes
          systemctl enable apache2 --now
          echo "Hello World" > /var/www/html/index.html
      SecurityGroupIds:
        - Ref:
            MySecurityGroup

Outputs:
  MySecurityGroupGroupId:
    Value: !GetAtt MySecurityGroup.GroupId
  MySecurityGroupVpcId:
    Value: !GetAtt MySecurityGroup.VpcId
  MyInstanceAvailabilityZone:
    Value: !GetAtt MyInstance.AvailabilityZone
  MyInstancePrivateDnsName:
    Value: !GetAtt MyInstance.PrivateDnsName
  MyInstancePrivateIp:
    Value: !GetAtt MyInstance.PrivateIp
  MyInstancePublicDnsName:
    Value: !GetAtt MyInstance.PublicDnsName
  MyInstancePublicIp:
    Value: !GetAtt MyInstance.PublicIp
